fix: eliminate extra space at bottom of mobile toolbar menu
- Wrap DevExtreme List component in custom div with class "user-panel-list-wrapper"
- Add targeted CSS to reduce bottom space in the dx-scrollview-content element

--- a/fourspm_web/src/components/user-panel/user-panel.scss
+++ b/fourspm_web/src/components/user-panel/user-panel.scss
@@ -31,3 +31,12 @@
   }
 }
 
+.user-panel-list-wrapper {
+  // Style the list like the context menu
+  .dx-list {
+    // Target the dx-scrollview-content element directly
+    .dx-scrollview-content {
+      padding: 0px !important;
+    }
+  }
+}
